--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Task</title>
   </head>
   <body>
-    <header style="text-align: center">Welcome To My Site</header>
-    <h1>Fill the Form</h1>
+    <header style="text-align: center">Welcometo my site</header>
+    <h1>Fill the form</h1>
     <div class="main">
       <div class="form">
-        <h4 style="text-align: center">Register Form</h4>
+        <h4 style="text-align: center">Registration Form</h4>
         <form id="user-form">
           <label for="name">Name : </label>
           <input required type="text" name="name" id="name" />
