--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Task</title>
   </head>
   <body>
-    <header style="text-align: center">Welcometo my site</header>
+    <header style="text-align: center">Welcome to the site</header>
     <h1>Fill the form</h1>
     <div class="main">
       <div class="form">
